WIP: towards django 1.5

--- a/pendulum/templates/pendulum/clock_out.html
+++ b/pendulum/templates/pendulum/clock_out.html
@@ -5,7 +5,7 @@
 
 {{ block.super }}
 
-<form action="{% url pendulum-clock-out entry.id %}" method="post">
+<form action="{% url 'pendulum-clock-out' entry.id %}" method="post">
 <table>
 {{ form }}
 </table>
