--- a/pendulum/templates/pendulum/clock_in.html
+++ b/pendulum/templates/pendulum/clock_in.html
@@ -7,7 +7,8 @@
 
 {{ block.super }}
 
-<form action="{% url pendulum-clock-in %}" method="post">
+<form action="{% url "pendulum-clock-in" %}" method="post">
+{% csrf_token %}
 <table class="clock-in">
 {{ form }}
 {% if user.clocked_in %}<tr class="even">
