--- a/pendulum/templates/pendulum/delete_entry.html
+++ b/pendulum/templates/pendulum/delete_entry.html
@@ -7,7 +7,7 @@
 
 {{ block.super }}
 
-<form action="{% url pendulum-delete entry.id %}" method="post">
+<form action="{% url "pendulum-delete" entry.id %}" method="post">
 <h3>Are you sure you want to delete this entry?</h3>
 <input type="submit" value="Yes" />
 <input type="button" value="No" onclick="javascript:history.go(-1)" />
